[package]
name = "da-tcmalloc"
version = "0.4.3"
authors = ["Dan Aloni <dan@kernelim.com>"]
description = "Drop-in global allocator using a modified tcmalloc"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2021"

repository = "https://github.com/da-x/da-tcmalloc-rs"
documentation = "https://docs.rs/da-tcmalloc"

keywords = ["allocator"]
categories = ["memory-management"]

[dependencies.da-tcmalloc-sys]
path = "da-tcmalloc-sys"
version = "0.4.0"
