[package]
name = "da-tcmalloc-sys"
version = "0.4.5"
authors = ["Dan Aloni <dan@kernelim.com>"]
description = "Drop-in global allocator using a modified tcmalloc"
license = "MIT/Apache-2.0"
edition = "2018"
build = "build.rs"
links = "tcmalloc"

repository = "https://github.com/da-x/da-tcmalloc-rs"
documentation = "https://docs.rs/da-tcmalloc"

keywords = ["allocator"]
categories = ["memory-management"]

[lib]
test = false
doc-test = false
bench = false

[features]
no-libunwind = []

[build-dependencies]
bindgen = "0.71"
